--- a/en/tool.html
+++ b/en/tool.html
@@ -6,16 +6,14 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>toda-carne.github.io</title>
+<title>sebiblia.github.io</title>
 <meta name="author" content="Jose Luis Quiroga">
 <link rel="stylesheet" href="../code/sf_styles.css">
 </head>
 <body>
 
 <div class="adapt_menu_bar">
-	<div id="id_top_menu" class="adapt_menu">
-		<a id="id_home" class="adapt_item" title="Home" href="tool.html"><i class="has_icons icon-bible"></i></a>
-	</div>
+	<div class="top_menu_font">SeBiblia.github.io</div>
 	<div id="id_pop_menu" class="adapt_menu_pop">
 		<i class="has_icons icon-menu"></i>
 	</div>		
@@ -27,7 +25,10 @@
 <div id="id_tool_content" class="tool_content">
 <div id="id_pop_opt_sec"></div>
 
+<!--
+<div class="begin_of_content"></div>
 <h1 class="big_title">Strong Bible Selector</h1>
+-->
 
 <div class="grid_tool">
 	<div id="id_old_test" class="bib_item is_option">
